<resources>
    <string name="app_name">Symmetrical Spoon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_game_map">Go to game map</string>
    <string name="navigate_to_game_ar">Navigate to game AR</string>
    <string name="go_to_item_list">Go to item list</string>
    <string name="item_list">item list</string>
    <string name="reward_list">reward list</string>
    <string name="daily_quests">Daily Quests</string>
    <string name="graphs">Graphs</string>
    <string name="back_to_main_menu">back to main menu</string>
    <string name="see_more_game_menus">see more game menus</string>
    <string name="reward_shop">Reward Shop</string>
    <string name="buy_item">Buy this item</string>
    <string name="my_collections">My Collections</string>
    <string name="play_with">Play with %s!</string>
    <string name="collected_time">Collected time: %s</string>
    <string name="distance_to_destination">Distance to destination: %dm</string>
    <string name="daily_quest">Daily quests for today 📜</string>
    <string name="purchase_message">Are you sure that you would buy %s?</string>
    <string name="purchase_confirmation_msg">You got %s</string>
    <string name="warning_message">You don\'t have enough gems to get %s</string>
    <string name="normal_quiz_description">Normal quiz, answer correctly to the multiple choice question</string>
    <string name="image_quiz_description">Image quiz, select the correct answer</string>
    <string name="sphere_task_description">Find 3 spheres around you!</string>
    <string name="multiple_image_quiz_description">Find the image corresponding to the task</string>
    <string name="start_quiz">Start quiz</string>
    <string name="start_image_quiz">Start image quiz</string>
    <string name="start_sphere_task">Start sphere task</string>
    <string name="start_find_correct_image_task">Start find correct image task</string>
    <string name="start_task">Start task</string>
    <string name="task_completed">Task completed!</string>
    <string name="ok">OK</string>
    <string name="task_completed_description">%s %s!\n%s</string>
    <string name="all_gems_collected_toast">New locations set, well done collecting all the previous ones!!</string>
    <string name="normal_quiz">Normal Quiz</string>
    <string name="image_quiz">Image Quiz</string>
    <string name="sphere_task">Sphere Task</string>
    <string name="multiple_image_quiz">Multiple Image Quiz</string>
    <string name="collect_all_emeralds_daily">Collect all Emeralds from the map!</string>
    <string name="collect_all_rubies_daily">Collect all Rubies from the map!</string>
    <string name="collect_all_sapphires_daily">Collect all Sapphires from the map!</string>
    <string name="collect_all_topazes_daily">Collect all Topazes from the map!</string>
    <string name="diamond_reward_daily">Reward: 3 Diamonds</string>
    <string name="collect_one_of_each_daily">Collect one of each gems!</string>
    <string name="step_count">%d / %d steps</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="go_back">go back</string>
    <string name="no_internet_connection_description">Connect to Wifi or Mobile data first to call your item!</string>
    <string name="steps">👟 %s</string>
    <string name="collected_item_preview">Collected item preview</string>
    <string name="sample_item">Sample item</string>
    <string name="incomplete">incomplete</string>
    <string name="reward_diamond">reward diamond</string>
    <string name="splash_screen">Splash screen</string>
    <string name="reward_item_preview">reward item preview</string>
    <string name="cancel">Cancel</string>
    <string name="buy">buy</string>
    <string name="purchase_confirmation">Purchase confirmation</string>
    <string name="warning">Oops 💸</string>
    <string name="congratulations_msg">Congratulations! 🎁</string>
    <string name="you_got_it">You got it</string>
    <string name="go_to_collection">see collection</string>
    <string name="image_question">image question</string>
    <string name="question_image_3">question image 3</string>
    <string name="question_image_2">question image 2</string>
    <string name="question_image_1">question image 1</string>
    <string name="no_internet_notification">no internet notification</string>
    <string name="no_internet_connection_msg">no internet connection :(</string>
    <string name="user_ruby">user ruby</string>
    <string name="user_topaz">user topaz</string>
    <string name="user_sapphire">user sapphire</string>
    <string name="user_diamond">user diamond</string>
    <string name="user_emerald">user emerald</string>
    <string name="item_description_preview">some description..</string>
    <string name="logo_image">logo image</string>
    <string name="play">Play</string>
    <string name="clear_object">clear object</string>
    <string name="reward_3_diamonds">Reward: 3 Diamonds</string>
    <string name="add">add</string>
    <string name="required_diamond">required diamond</string>
    <string name="required_emerald">required emerald</string>
    <string name="required_ruby">required ruby</string>
    <string name="required_sapphire">required sapphire</string>
    <string name="required_topaz">required topaz</string>
    <string name="get_current_location">get current location</string>
</resources>
