<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="24dp"
    tools:context=".fragments.MainMenuFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/container"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <Button
            android:id="@+id/navigate_to_map_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#5475a6 "
            android:fontFamily="@font/nunito_bold"
            android:paddingVertical="12dp"
            android:text="@string/go_to_game_map"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/graphs_btn"
            style="@style/MainMenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/graphs" />

        <Button
            android:id="@+id/my_collections"
            style="@style/MainMenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/my_collections" />

        <Button
            android:id="@+id/reward_list"
            style="@style/MainMenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_secondary_dark"
            android:text="@string/reward_shop" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/game_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>