<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal|fill_vertical"
    android:background="@drawable/ic_background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/back_to_main_menu"
        android:foregroundTint="@color/red"
        android:foregroundTintMode="multiply"
        android:src="@drawable/ic_left_arrow"
        app:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="40dp"
        app:tint="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="#D5FFFFFF"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingTop="60dp"
        android:paddingEnd="40dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/item_list" />

        <Button
            android:id="@+id/reward_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/reward_list" />

        <Button
            android:id="@+id/daily_quest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/daily_quest" />

        <Button
            android:id="@+id/back_to_main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>