<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/blue_primary_light"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/divider">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congratulations_msg"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primary_900"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/notification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:breakStrategy="balanced"
                    android:text="@string/you_got_it"
                    android:textColor="@color/primary_900"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--this view separates between button and the message-->
            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/go_to_collection_btn"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/go_to_collection_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:fontFamily="@font/nunito_bold"
                android:paddingHorizontal="8dp"
                android:text="@string/go_to_collection"
                android:textAlignment="center"
                android:textColor="@color/accent_color"
                android:textSize="16sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
